--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "crypto": "^1.0.1",
     "express": "^4.17.1",
-    "mongodb": "^3.6.6"
+    "mongodb": "^3.6.6",
+    "node-fetch": "^2.6.1",
+    "split": "^1.0.1",
+    "substr": "0.0.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
