--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "mongodb": "^3.6.6",
     "node-fetch": "^2.6.1",
     "split": "^1.0.1",
-    "substr": "0.0.7"
+    "substr": "0.0.7",
+    "ws": "^7.4.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
