--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
   "author": "Matthew Rivero, Luca Berni & Pau Agustina",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "express-sessions": "^1.0.6",
     "mongodb": "^3.6.6",
     "node-fetch": "^2.6.1",
+    "node-gyp": "^8.0.0",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "split": "^1.0.1",
     "substr": "0.0.7",
     "ws": "^7.4.5"
