--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "express-sessions": "^1.0.6",
+    "fernet": "^0.3.1",
     "mongodb": "^3.6.6",
     "node-fetch": "^2.6.1",
     "node-gyp": "^8.0.0",
